# flechtwerk

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  test.yaml
docs/: index.md
docs/api/: index.md
docs/concepts/: architecture.md  config-topics.md  exactly-once.md  index.md  secrets.md  typed-attributes.md  typed-records.md
docs/guides/: best-practices.md  extractor.md  getting-started.md  index.md  mqtt.md  observability.md  transformer.md
docs/stylesheets/: manuscript.css
hooks/: chapters.py
overrides/: main.html
src/flechtwerk/: CLAUDE.md  README.md  __init__.py  __main__.py  bytewax_shim.py  configs.py  extractor.py  kafka.py  keyring.py  metrics.py  migrate_state.py  module.py  mqtt.py  observer.py  secrets.py  stage.py  state.py  testing.py  transformer.py  types.py
src/flechtwerk/attribute/: __init__.py  attribute.py  codec.py  codecs.py  dict.py  record.py  registry.py
tests/: cli_test.py  configs_test.py  conftest.py  extractor_test.py  kafka_test.py  keyring_test.py  migrate_state_test.py  module_test.py  mqtt_test.py  observer_test.py  producer_test.py  secrets_test.py  serialize_test.py  state_test.py  testing.py  transformer_test.py  types_test.py
tests/attribute/: attribute_test.py  codecs_test.py  dict_test.py  record_test.py  registry_test.py
tests/integration/: config_topics_test.py  conftest.py  exactly_once_test.py  extractor_sharding_test.py  load_balancing_test.py  mqtt_delivery_test.py  restore_changelog_test.py
tools/ornaments/: _braid.py  _weave.py  gen-api.py  gen-concepts.py  gen-guides.py  gen-home.py  generate.py  style_braid4.py  style_braid6.py  style_chain.py  style_chevron.py  style_chevron5.py  style_gridknot.py  style_linkchain.py  style_plait.py  style_spiral.py  style_stepfret.py  style_threestrand.py  style_triquetra.py  style_twill.py  style_twistknot.py  style_weave.py
