[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[dependency-groups]
dev = [
    "aiokafka[lz4,snappy,zstd]~=0.13",
    "hypothesis>=6.100",
    "paho-mqtt~=2.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0.0",
    "testcontainers[kafka]>=4.8",
]

[project]
authors = [
    { name = "Christian Schlichtherle" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "aiokafka[zstd]~=0.13",
    "prometheus-client~=0.21",
    "reactor-di~=0.5",
    "rocksdict~=0.3",
]
description = "An async Python port of the Kafka Streams operational model"
dynamic = ["version"]
keywords = ["aiokafka", "asyncio", "exactly-once", "kafka", "kafka-streams", "mqtt", "stream-processing"]
license = { text = "MIT" }
name = "flechtwerk"
readme = "README.md"
requires-python = ">=3.14"

[project.optional-dependencies]
mqtt = [
    "paho-mqtt~=2.1",
]

[project.urls]
Homepage = "https://github.com/bsure-analytics/flechtwerk"
Issues = "https://github.com/bsure-analytics/flechtwerk/issues"
Repository = "https://github.com/bsure-analytics/flechtwerk"

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
show_missing = true

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*_test.py",
]
source = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/flechtwerk"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
asyncio_mode = "auto"
filterwarnings = [
    # testcontainers.mqtt uses its own deprecated @wait_container_is_ready
    # and wait_for_logs(...) helpers internally — not something we can fix
    # from the call site. Mute only those specific module-scoped warnings.
    "ignore::DeprecationWarning:testcontainers.mqtt",
]
markers = [
    "integration: tests that require Docker-based testcontainers (Kafka, Mosquitto, etc.; run with `-m integration`)",
]
testpaths = ["tests"]
