[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[dependency-groups]
dev = [
    "aiokafka[lz4,snappy,zstd]~=0.13",
    "coverage>=7.6",
    "hypothesis>=6.100",
    "joserfc~=1.7",
    "paho-mqtt~=2.1",
    "poethepoet>=0.29",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "testcontainers[kafka]>=4.8",
]
docs = [
    "black>=24",
    "joserfc~=1.7",  # mkdocstrings imports flechtwerk.secrets to document it
    "mkdocs-material~=9.5",
    "mkdocstrings[python]~=0.27",
]

[project]
authors = [
    { name = "Christian Schlichtherle" },
    { name = "Viktor Penev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "aiokafka[zstd]~=0.13",
    "prometheus-client~=0.21",
    "reactor-di~=0.5",
    "rocksdict~=0.3",
]
description = "Truly async Python stream processing with real Kafka transactions for exactly-once delivery, and an MQTT→Kafka bridge that ACKs only after Kafka has the data."
dynamic = ["version"]
keywords = ["aiokafka", "asyncio", "exactly-once", "kafka", "kafka-streams", "mqtt", "stream-processing"]
license = { text = "MIT" }
maintainers = [
    { name = "b.sure GmbH" },
]
name = "flechtwerk"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
mqtt = [
    "paho-mqtt~=2.1",
]
secrets = [
    "joserfc~=1.7",
]

[project.urls]
Documentation = "https://bsure-analytics.github.io/flechtwerk/"
Homepage = "https://github.com/bsure-analytics/flechtwerk"
Issues = "https://github.com/bsure-analytics/flechtwerk/issues"
Repository = "https://github.com/bsure-analytics/flechtwerk"

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
show_missing = true

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*_test.py",
]
source = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/flechtwerk"]

[tool.hatch.version]
source = "vcs"

[tool.poe.tasks]
build = { cmd = "uv build", help = "Build the sdist and wheel" }
docs = { cmd = "uv run --group docs mkdocs serve", help = "Serve the docs locally with live reload" }
docs-build = { cmd = "uv run --group docs mkdocs build --strict", help = "Build the docs site (strict)" }
test = { cmd = "pytest", help = "Run the unit tests (Docker-free)" }
test-all = { cmd = "pytest -m 'integration or not integration'", help = "Run unit + integration tests (needs Docker)" }
test-integration = { cmd = "pytest -m integration", help = "Run only the integration tests (needs Docker)" }

[tool.poe.tasks.cov]
help = "Run the full test suite with coverage, then print the report"
sequence = [
    { cmd = "coverage run -m pytest -m 'integration or not integration'" },
    { cmd = "coverage report" },
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
asyncio_mode = "auto"
filterwarnings = [
    # testcontainers.mqtt uses its own deprecated @wait_container_is_ready
    # and wait_for_logs(...) helpers internally — not something we can fix
    # from the call site. Mute only those specific module-scoped warnings.
    "ignore::DeprecationWarning:testcontainers.mqtt",
]
markers = [
    "integration: tests that require Docker-based testcontainers (Kafka, Mosquitto, etc.; run with `-m integration`)",
]
testpaths = ["tests"]
